GNOME Bugzilla – Bug 668969
Memory leak when parsing a ImageBrush element fails
Last modified: 2012-01-30 12:58:06 UTC
Created attachment 206370 [details] [review] add error handler to brush_image GMarkupParser A GXPSBrushImage struct is leaked when parsing fails for a child element of a ImageBrush. Example: <Path> <Path.Fill> <ImageBrush ImageSource="."> <invalid /> </ImageBrush> </Path.Fill> </Path> Parsing is aborted when invalid data is encountered and cleanup code is not run. This adds a error handler to the brush_image GMarkupParser to free the struct on error.
Review of attachment 206370 [details] [review]: Pushed! Thank you