Fixed memory leak when parsing a ImageBrush element fails

A GXPSBrushImage struct is leaked when parsing fails for a child
element of a ImageBrush.  Parsing is aborted when invalid data is
encountered and cleanup code is not run.  This adds a error handler to
the brush_image GMarkupParser to free the struct on error.

https://bugzilla.gnome.org/show_bug.cgi?id=668969